Fixed left spacing.

--- a/jujugui/static/gui/src/app/components/machine-view/_machine-view.scss
+++ b/jujugui/static/gui/src/app/components/machine-view/_machine-view.scss
@@ -13,7 +13,7 @@
         position: absolute;
         top: 10px;
         bottom: $deployer-bar-height;
-        left: $left-panel-width + 40px;
+        left: $left-panel-width + 20px;
         right: 20px;
     }
 
